1. FINALIZE EL LANDING PAGE, ENLAZADO CON EL DASHBOARD. Faltaria agregar la mision y terminar el formulario de contactenos.

--- a/digital_events_repository/web/landingPage/conozcanos.xhtml
+++ b/digital_events_repository/web/landingPage/conozcanos.xhtml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<ui:composition template="/landingPage/index.xhtml"
+<ui:composition template="/index.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -10,7 +10,75 @@
                 xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="content-landing">
-        
+
+        <div class="page-header header-filter" data-parallax="true" style="background-image: url('#{request.contextPath}/resources/img/background5.png'); transform: translate3d(0px, 0px, 0px);">
+            <div class="container">
+                <br></br>
+                <br></br>
+                <br></br>
+                <br></br>
+                <br></br>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1 class="title">¿Qué Hacemos?</h1>
+                        <h4>Ofrecemos una alternativa, innovadora y eficaz para la celebración de cada fecha especial, llevando a cada uno de nuestros eventos excelencia y compromiso, sobrepasando siempre las expectativas de nuestros clientes.</h4>
+                        <br></br>
+                    </div>
+                </div>                
+            </div>
+        </div>
+
+
+        <div class="main main-raised" style="background-image: url('#{request.contextPath}/resources/img/background6.png'); background-size: cover; background-position: top center;">
+            <div class="container" >
+                <div class="section text-center bg-blue-sky">
+                    <div class="row">
+                        <div class="col-sm-12 text-center">                           
+                            <h3 class="card-title text-white">¿Quienes Somos?</h3>                          
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 ml-auto mr-auto text-center text-white">
+                            <h3 class="card-title text-white">Nuetsra Misión</h3>
+                            <p class="card-description text-white  text-left">
+                                Ser una organización social competitiva, flexible y dinámica dedicada a la provisión de los mejores servicios recreativos, 
+                                empresariales e infantiles a nivel nacional e internacional, para el bienestar de los niños y la comunidad en general, 
+                                distinguiéndonos como la mejor alternativa de diversión en la sociedad, contando con la mejor calidad del talento humano.
+                            </p>
+                        </div>
+                        <div class="col-md-6 ml-auto mr-auto text-center">                            
+                            <h3 class="card-title text-white"> Nuestra Visión</h3>
+                            <p class="card-description text-white text-left">
+                                Ser una organización social competitiva, flexible y dinámica dedicada a la provisión de los mejores servicios recreativos, 
+                                empresariales e infantiles a nivel nacional e internacional, para el bienestar de los niños y la comunidad en general, 
+                                distinguiéndonos como la mejor alternativa de diversión y accesiblidida en la sociedad, contando con la mejor calidad del talento humano.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 ml-auto mr-auto text-white">
+                            <h3 class="card-title text-center text-white">Preguntas Frecuentes</h3>  
+                            <h4 class="card-description text-white text-left justify">¿CUÁL SERÍA EL COSTO, PRECIO O PRESUPUESTO PARA UNA FIESTA INFANTIL? </h4>
+                            <p class="card-category text-white text-left justify">
+                                Después de haber cotizado todos los pasos anteriores puedes fijar un presupuesto real sobre toda la fiesta infantil.<br/>
+                                Enfocarse en donde se dan los costos más elevados que suele ser el menú.<br/>
+                                Por esta razón te sugerimos hacer un buen cálculo y confirmar invitados para evitar desperdicios.<br/>
+                                Debes tener en cuenta que los niños no consumen grandes cantidades de comida en cortos periodos de tiempo.<br/>
+                                Se debe ser bien ajustado al presupuesto inicial e iniciar con buena antelación la planeación y preparación de la fiesta infantil y de esta manera hacerla inolvidable para el cumpleañero y para sus invitados.
+                            </p>
+                            <h4 class="card-description text-white text-right justify">¿CÓMO SON LAS SORPRESAS PARA NIÑ@S EN UNA FIESTA INFANTIL?</h4>
+                            <p class="card-category text-white text-right justify">
+                                Se suelen dar premios o regalos para los juegos y competencias, motivando a los niñ@s a realizar las diversas actividades organizadas por los recreadores.<br/>
+                                Los premios se deben tenerse listos antes de comenzar la actividad, para que sean entregados en el momento justo.<br/>
+                                También debes tener sorpresas para todos los niños, que las guardaran como un lindo recuerdo del evento o celebración.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
     </ui:define>
 
 
