--- a/digital_events_repository/web/landingPage/footer.xhtml
+++ b/digital_events_repository/web/landingPage/footer.xhtml
@@ -11,17 +11,22 @@
             <nav class="float-left">
                 <ul>
                     <li>
+                        <a href="#{request.contextPath}/index.xhtml">
+                            Inicio
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://www.eventoslaroca.com/">
                             Eventos La Roca
                         </a>
                     </li>
                     <li>
-                        <a href="conozcanos.xhtml">
+                        <a href="#{request.contextPath}/landingPage/conozcanos.xhtml">
                             Conózcanos
                         </a>
                     </li>
                     <li>
-                        <a href="contactenos.xhtml">
+                        <a href="#{request.contextPath}/landingPage/contactenos.xhtml">
                             Contactenos
                         </a>
                     </li>
