--- a/digital_events_repository/web/landingPage/main.xhtml
+++ b/digital_events_repository/web/landingPage/main.xhtml
@@ -9,7 +9,7 @@
 
 
     <ui:insert name="content-landing">
-        <div class="page-header header-filter" data-parallax="true" style="background-image: url(../resources/img/background.png;); transform: translate3d(0px, 0px, 0px);">
+        <div class="page-header header-filter" data-parallax="true" style="background-image: url('#{request.contextPath}/resources/img/background.png'); transform: translate3d(0px, 0px, 0px);">
             <div class="container">
                 <br></br>
                 <br></br>
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </div>
-        <div class="main main-raised" style="background-image: url('../resources/img/form-wizard-bg.jpg'); background-size: cover; background-position: top center;">
+        <div class="main main-raised" style="background-image: url('#{request.contextPath}/resources/img/form-wizard-bg.jpg'); background-size: cover; background-position: top center;">
             <div class="container" >
                 <div class="section text-center">
                     <div class="row">
@@ -116,42 +116,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="section section-contacts">
-                        <div class="row">
-                            <div class="col-md-8 ml-auto mr-auto">
-                                <h2 class="card-title text-white">Work with us</h2>
-                                <h4 class="card-category text-white">Divide details about your product or agency work into parts. Write a few lines about each one and contact us about any further collaboration. We will responde get back to you in a couple of hours.</h4>
-                                <form class="contact-form">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label class="bmd-label-floating">Your Name</label>
-                                                <input type="email" class="form-control"/>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label class="bmd-label-floating">Your Email</label>
-                                                <input type="email" class="form-control"/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleMessage" class="bmd-label-floating">Your Message</label>
-                                        <textarea type="email" class="form-control" rows="4" id="exampleMessage"></textarea>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-4 ml-auto mr-auto text-center">
-                                            <button class="btn btn-primary btn-raised">
-                                                Send Message
-                                            </button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+                    </div>                    
                 </div>
             </div>
         </div>
